[package]
name = "rust_pathsim"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_pathsim"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
rand = "0.10.0"
rand_distr = "0.6.0"
rand_pcg = "0.10.1"
rayon = "1.11.0"
